# ssmtp

./: .gitignore  Makefile.in  arpadate.c  configure  configure.in  ssmtp.8  ssmtp.c  ssmtp.conf  ssmtp.h
